# rust-jukebox-app

./: .gitignore  README.md
admin/: Generate_Music_Folders.bat
admin/GenerateImage/: .gitignore  Cargo.toml  README.md
admin/GenerateImage/src/: main.rs
main-software/: .gitignore  README.md
main-software/src-tauri/: tauri.conf.json
main-software/src-tauri/capabilities/: default.json
main-software/ui/: index.html  index.js
main-software/ui/CSS/: admin.css  keyboard.css  style.css  top-middle-block.css
main-software/ui/JS/: admin.js  event-handlers.js  keyboard.js  modal.js  search.js  skip.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.conf.reference.js
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  songs.rs
ui/: index.html  index.js
ui/CSS/: admin.css  bottom-middle-block.css  left-block.css  materialUI-icons.css  mejs.css  right-block-scroll.css  right-block-search.css  sidenav.css
ui/JS/: admin.js  delete.js  keyboard.js  mejs.js  modal.js  queue.js  scrollbar.js  search.js  shuffle.js  songs.js  validation.js  youtube.js
ui/jquery-framework/: jquery-ui.css
